[tool.poetry]
name = "analystkit"
version = "0.1.1"
description = "Shared Plotly theme, viz helpers, and settings for analytics projects. Compatible with Python 3.8+ and Plotly 5.x."
authors = ["Josh Carlisle <josh@bitwiseinvestments.com>"]
readme = "README.md"
packages = [{ include = "analystkit" }]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.24.0,<6.0.0"
pandas = "^2.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.0.0"
kaleido = "^0.2.1"  # Compatible with Plotly 5.x

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
