[tool.poetry]
name = "analystkit"
version = "0.1.2"
description = "Shared Plotly theme, viz helpers, and settings for analytics projects. Compatible with Python 3.8+ and any Plotly version. Chart export requires kaleido (optional)."
authors = ["Josh Carlisle <josh@bitwiseinvestments.com>"]
readme = "README.md"
packages = [{ include = "analystkit" }]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.24.0"
pandas = "^2.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.0.0"

# Note: kaleido is not included as a dependency
# Users should install it manually: pip install kaleido
# or poetry add kaleido (with version compatible with their platform)
# 
# Compatibility guide:
# - Plotly 5.x + kaleido 0.2.1+ = Works great
# - Plotly 6.x + kaleido 1.0+ = Also works great

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
